# fenix-fx500-hello-world

./: .gitignore  CAN_PROBLEM.md  PREPARE-Windows.md  README.md
.github/workflows/: build.yml  ci.yml  test.yml
app/: CMakeLists.txt  fxa500_03.overlay  no-shock-sensor.overlay  prj.conf  west.yml
app/boards/fenix/fxa500_02/: board.cmake  board.yml  fxa500_02.dts  fxa500_02.yaml  fxa500_02_defconfig  memmap.numbers
app/boards/fenix/fxa500_03/: Kconfig.defconfig  Kconfig.fxa500_03  board.cmake  board.yml  fxa500_03.dts  fxa500_03.yaml  fxa500_03_defconfig  memmap.md
app/src/: accel_sensor.c  led.c  main.c  save  save2  shock_sensor.c  shock_sensor_state.h
app/zephyr/: module.yml
